--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7"><![endif]-->
-<!--[if IE 7]><html class="no-js lt-ie9 lt-ie8" <![endif]-->
-<!--[if IE 8]><html class="no-js lt-ie9" <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-
-{% include head.html %}
-
-<body>
-
-   {% include header.html %}
-
-   <div class="content">
-      <div class="container">
-         {{ content }}
+<html lang="{{ site.isolang }}" itemscope itemtype="http://schema.org/WebPage">
+  {% include head.html %}
+  <body>
+    <div class="container">
+      <div class="section my-section" itemprop="mainContentOfPage" itemscope itemtype="https://schema.org/WebPageElement">
+        <h1 itemprop="headline"><a class="my-name" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
+        <p class="my-description" itemprop="text">
+          {{ site.about }}
+          <br>
+          <i class="fa fa-map-marker"></i> {{ site.location }}
+        </p>
+        <div class="row">
+          <div class="col s12 m12 l12">
+            {{ content }}
+          </div>
+        </div>
       </div>
-   </div><!-- end .content -->
-
-   {% include footer.html %}
-   {% include scripts.html %}
-
-</body>
-
+    </div>
+    {% include footer.html %}
+  </body>
 </html>
