--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,32 +1,44 @@
 ---
 layout: default
 ---
-<div class="post">
-  {% if page.image %}
-    <div class="featuredImage">
-        <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.image }}" alt="" />
-      </div>
-  {% endif %}
-  <h1 class="postTitle">{{ page.title }}</h1>
-  <p class="meta">{{ page.date | date: '%B %d, %Y' }} | <span class="time">{{ page.content | number_of_words | divided_by:180 }}</span> Minute Read</p>
-  
-  {{ content }}
+<article class="left-align" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <!-- POST NAVIGATION -->
-  <div class="postNav clearfix">
-    {% if page.previous.url %} 
-      <a class="prev{% if page.previous.image %} image{% endif %}" href="{{ page.previous.url | prepend: site.baseurl }}"><span>&laquo;&nbsp;{{ page.previous.title }}</span>
-      {% if page.previous.image %} 
-        <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.previous.image }}" alt="">
-      {% endif %}
-    </a>
-    {% endif %}  
-    {% if page.next.url %}  
-      <a class="next{% if page.next.image %} image{% endif %}" href="{{ page.next.url | prepend: site.baseurl }}"><span>{{ page.next.title }}&nbsp;&raquo;</span>
-      {% if page.next.image %} 
-        <img src="{{ '/assets/img/' | prepend: site.baseurl | append: page.next.image }}" alt="">
-      {% endif %} 
-      </a>
-    {% endif %} 
+  <h2 class="my-mini-heading" itemprop="name headline">{{ page.title }}<br>
+    <span class="my-mini-heading-sub">
+    <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
+      {{ page.date | date: "%b %-d, %Y" }}
+    </time>
+    </span></h2>
+
+  <div class="my-text-body">
+    {{ content }}
   </div>
-</div>
+
+  <!--<p class="center-align my-text-author" itemprop="author" itemscope itemtype="http://schema.org/Person">
+    {% if page.author %}
+      <span itemprop="name">{{ site.name_badge }} {{ page.author }}</span>
+    {% endif %}
+    <br>
+    {% if page.tags %}
+      <i class="fa fa-tags" aria-hidden="true"></i>
+      {% for tag in page.tags %}
+        <span class="my-tag">{{ tag }}</span>&ensp;
+      {% endfor %}
+    {% endif %}
+  </p>-->
+  <br>
+
+  <div class="center-align">
+  {% if page.next.url %}
+    <a class="waves-effect waves-brick btn-flat btn-large my-thin-btn" href="{{ page.next.url | prepend: site.baseurl }}"><i class="fa fa-angle-double-left" aria-hidden="true"></i></a>
+  {% else %}
+    <a class="btn-flat btn-large my-thin-btn disabled"><i class="fa fa-angle-double-left" aria-hidden="true"></i></a>
+  {% endif %}
+  <a class="waves-effect waves-brick btn-flat btn-large" href="{{ site.baseurl }}/">{{ site.home_btn }}</a>
+  {% if page.previous.url %}
+    <a class="waves-effect waves-brick btn-flat btn-large my-thin-btn" href="{{ page.previous.url | prepend: site.baseurl }}"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+  {% else %}
+        <a class="btn-flat btn-large my-thin-btn disabled"><i class="fa fa-angle-double-right" aria-hidden="true"></i></a>
+  {% endif %}
+  </div>
+</article>
