--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,9 +26,8 @@ layout: default
       {% endfor %}
     {% endif %}
   </p>-->
-  <br>
 
-  <div class="center-align">
+  <div class="center-align footer-buttons">
   {% if page.next.url %}
     <a class="waves-effect waves-brick btn-flat btn-large my-thin-btn" href="{{ page.next.url | prepend: site.baseurl }}"><i class="fa fa-angle-double-left" aria-hidden="true"></i></a>
   {% else %}
