--- a/styles/main.css
+++ b/styles/main.css
@@ -224,6 +224,9 @@ a{
     border-radius: 3px;*/
     text-decoration: underline;
 }
+.my-text-body p{
+    clear: both;
+}
 
 .my-twitter-link:hover{
     color: #1da0f2;
@@ -256,4 +259,8 @@ img{
 }
 figcaption{
     font-style: italic;
+}
+.footer-buttons{
+    clear: both;
+    padding-top: 20px;
 }
