still trying to fix baseurl problem

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,16 +25,16 @@
     <meta name="twitter:description" content="{{ site.description }}" />
     <meta name="twitter:image" content="{{ site.url }}/images/favicon.png" />
 
-    <link href="{{ "/atom.xml" | prepend: site.baseurl }}" type="application/atom+xml" rel="alternate" title="ATOM feed">
-    <link href="{{ "/feed.xml" | prepend: site.baseurl }}" type="application/rss+xml" rel="alternate" title="RSS feed">
+    <link href="{{ "/atom.xml" | prepend: site.burl }}" type="application/atom+xml" rel="alternate" title="ATOM feed">
+    <link href="{{ "/feed.xml" | prepend: site.burl }}" type="application/rss+xml" rel="alternate" title="RSS feed">
 
 
-    <link rel="shortcut icon" href="{{ "/images/favicon.png" | prepend: site.baseurl }}">
+    <link rel="shortcut icon" href="{{ "/images/favicon.png" | prepend: site.burl }}">
 
-    <link rel="stylesheet" href="{{ "/styles/mlz/mlz.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/styles/main.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/styles/syntax.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/styles/github-markdown.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/styles/fa/css/font-awesome.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/styles/mlz/mlz.css" | prepend: site.burl }}">
+    <link rel="stylesheet" href="{{ "/styles/main.css" | prepend: site.burl }}">
+    <link rel="stylesheet" href="{{ "/styles/syntax.css" | prepend: site.burl }}">
+    <link rel="stylesheet" href="{{ "/styles/github-markdown.css" | prepend: site.burl }}">
+    <link rel="stylesheet" href="{{ "/styles/fa/css/font-awesome.min.css" | prepend: site.burl }}">
 
 </head>
