--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,6 +8,6 @@ layout: default
     {{ content }}
   </div>
   <div class="center-align">
-    <a class="btn-flat btn-large" href="{{ site.baseurl }}/">{{ site.home_btn }}</a>
+    <a class="btn-flat btn-large" href="{{ site.burl }}/">{{ site.home_btn }}</a>
   </div>
 </article>
