--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!--<footer class="my-footer z-depth-2">
     <p>
-        <a class="waves-effect waves-teal btn-flat my-imprint-link" href="{{ "/imprint.html" | prepend: site.baseurl }}">{{ site.imprint_btn }}</a>
+        <a class="waves-effect waves-teal btn-flat my-imprint-link" href="{{ "/imprint.html" | prepend: site.burl }}">{{ site.imprint_btn }}</a>
         {% if site.email %}
         <a href="mailto:{{ site.email }}" class="waves-effect waves-teal btn-flat my-mail-link"><i class="fa fa-envelope-o"></i></a>
         {% endif %}
@@ -12,8 +12,8 @@
         {% endif %}
     </p>
 </footer>-->
-<script type="text/javascript" src="{{ "/styles/jquery.js" | prepend: site.baseurl }}"></script>
-<script type="text/javascript" src="{{ "/styles/mlz/mlz.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript" src="{{ "/styles/jquery.js" | prepend: site.burl }}"></script>
+<script type="text/javascript" src="{{ "/styles/mlz/mlz.js" | prepend: site.burl }}"></script>
 {% if site.g_analytics %}
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
