undoing - the problem was actually in the git hook

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <body>
     <div class="container">
       <div class="section my-section" itemprop="mainContentOfPage" itemscope itemtype="https://schema.org/WebPageElement">
-        <h1 itemprop="headline"><a class="my-name" href="{{ site.burl }}/">{{ site.title }}</a></h1>
+        <h1 itemprop="headline"><a class="my-name" href="{{ site.baseurl }}/">{{ site.title }}</a></h1>
         <p class="my-description" itemprop="text">
           {{ site.about }}
           <br>
